--- a/_tag.ipynb
+++ b/_tag.ipynb
@@ -70,7 +70,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.10 ('expln-ai3.9': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -84,7 +84,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3b5cb7249c2b05c08ddca5a7278173987b98c572958faaa00b04c99c3e034fdc"
+   }
   }
  },
  "nbformat": 4,
